temp/unpackaged/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Onboarding__c</fullName>
        <label>Customer Onboarding</label>
        <referenceTo>Customer_Onboarding__c</referenceTo>
        <relationshipLabel>GSTIN</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GST_Number__c</fullName>
        <label>GST Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HQ State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Site_ID__c</fullName>
        <label>Oracle Site ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registered_Address_City__c</fullName>
        <label>Registered_Address_City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aambasa</fullName>
                </value>
                <value>
                    <fullName>Agarpara</fullName>
                </value>
                <value>
                    <fullName>Agartala</fullName>
                </value>
                <value>
                    <fullName>Agra</fullName>
                </value>
                <value>
                    <fullName>Agrahara</fullName>
                </value>
                <value>
                    <fullName>Agumbe</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Aizawl</fullName>
                </value>
                <value>
                    <fullName>Aizwal</fullName>
                </value>
                <value>
                    <fullName>Ajmer</fullName>
                </value>
                <value>
                    <fullName>Akbarpur</fullName>
                </value>
                <value>
                    <fullName>Akhnoor</fullName>
                </value>
                <value>
                    <fullName>Akkalkot</fullName>
                </value>
                <value>
                    <fullName>Alappuzha</fullName>
                </value>
                <value>
                    <fullName>Alappuzha Beach</fullName>
                </value>
                <value>
                    <fullName>Alibag</fullName>
                </value>
                <value>
                    <fullName>Aliganj</fullName>
                </value>
                <value>
                    <fullName>Aligarh</fullName>
                </value>
                <value>
                    <fullName>Alipurduar</fullName>
                </value>
                <value>
                    <fullName>Allagadda</fullName>
                </value>
                <value>
                    <fullName>Allahabad</fullName>
                </value>
                <value>
                    <fullName>Alleppey</fullName>
                </value>
                <value>
                    <fullName>Almora</fullName>
                </value>
                <value>
                    <fullName>Aluva</fullName>
                </value>
                <value>
                    <fullName>Amalapuram</fullName>
                </value>
                <value>
                    <fullName>Amarnath</fullName>
                </value>
                <value>
                    <fullName>Ambala</fullName>
                </value>
                <value>
                    <fullName>Ambala Cantt</fullName>
                </value>
                <value>
                    <fullName>Ambikapur</fullName>
                </value>
                <value>
                    <fullName>Ambur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Address_Country__c</fullName>
        <label>Registered_Address_Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Address_Line_1__c</fullName>
        <label>Registered Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Address_Postal_Code__c</fullName>
        <label>Registered_Address_Postal_Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Chhattisgarh</fullName>
                    <label>Chhatishgarh</label>
                </value>
                <value>
                    <fullName>Dadra and Nagar Haveli</fullName>
                    <label>DADRA &amp; NAGAR HAVELI</label>
                </value>
                <value>
                    <fullName>Daman and Diu</fullName>
                    <label>DAMAN &amp; DIU</label>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>Gujarat</fullName>
                </value>
                <value>
                    <fullName>Haryana</fullName>
                </value>
                <value>
                    <fullName>Himachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Jammu and Kashmir</fullName>
                    <label>JAMMU &amp; KASHMIR</label>
                </value>
                <value>
                    <fullName>Jharkhand</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Lakshadweep Islands</fullName>
                    <label>LAKHSWADEEP</label>
                </value>
                <value>
                    <fullName>Madhya Pradesh</fullName>
                </value>
                <value>
                    <fullName>Maharashtra</fullName>
                </value>
                <value>
                    <fullName>Manipur</fullName>
                </value>
                <value>
                    <fullName>Meghalaya</fullName>
                </value>
                <value>
                    <fullName>Mizoram</fullName>
                </value>
                <value>
                    <fullName>Nagaland</fullName>
                </value>
                <value>
                    <fullName>ODISHA</fullName>
                </value>
                <value>
                    <fullName>Pondicherry</fullName>
                </value>
                <value>
                    <fullName>Punjab</fullName>
                </value>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
                <value>
                    <fullName>Sikkim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>